tests/NormalTests/paczka1/small_fuzzy/31631765.err
Error in line 4: wN7mxZb4z A463 90,5
Error in line 3: sGL S92 36,4
